# gd2anki

./: .gitattributes  .gitignore  Cargo.toml
database/: ACCDB_unicode.csv  freq.db
src/: get_freq.rs  main.rs  make_db.rs  utils.rs
