[package]
name = "gd2anki"
version = "0.1.0"
authors = ["Rudo2204 <rudo2204@gmail.com>"]
edition = "2018"
description = "A program to generate anki flashcards from exported Goldendict data"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
kanji = "1"
quick-xml = { version = "0.21.0", features = ["serialize"] }
difference = "2.0.0"
serde = { version = "1.0", features = ["derive"] }
regex = "1"
rusqlite = { version = "0.24.2", features = ["vtab", "csvtab"]}
colored = "2.0.0"
csv = "1.1.5"
#log = "0.4"
#fern = { version = "0.6", features = ["colored"] }
#clap = "2.33"
xkcd_unreachable = "0.1.1"
#directories = "3"
